--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "vue-vscode-snippets",
-  "displayName": "Vue VSCode Snippets",
+  "name": "vue-snippets",
+  "displayName": "Vue Snippets",
   "description": "Snippets that will supercharge your Vue workflow",
   "icon": "images/vue-logo.png",
-  "version": "3.1.1",
+  "version": "1.0.1",
   "publisher": "sdras",
   "engines": {
     "vscode": "^1.14.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sdras/vue-vscode-snippets.git"
+    "url": "https://github.com/wflixu/vue-snippets.git"
   },
   "scripts": {
-    "build": "vsce package -o vue-vscode-snippets-$npm_package_version.vsix",
-    "install": "yarn build && code --install-extension vue-vscode-snippets-$npm_package_version.vsix"
+    "build": "vsce package -o vue-snippets-$npm_package_version.vsix",
+    "install": "pnpm build && code --install-extension vue-snippets-$npm_package_version.vsix"
   },
   "keywords": [
     "Vue",
@@ -81,5 +81,8 @@
         "path": "./snippets/nuxt-config.json"
       }
     ]
+  },
+  "devDependencies": {
+    "@vscode/vsce": "^2.29.0"
   }
 }
